@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-07T01:42:28Z",
-  "count_outdated" : 1909,
-  "uniques_outdated" : 1148,
-  "count" : 1920,
-  "uniques" : 1159,
+  "timestamp" : "2025-08-08T01:41:59Z",
+  "count_outdated" : 1910,
+  "uniques_outdated" : 1149,
+  "count" : 1921,
+  "uniques" : 1160,
   "clones" : [
-    {
-      "timestamp": "2025-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-26T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-08-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
