@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-07-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-07-26T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2025-08-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-08-07T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
